--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,8 +25,8 @@
     "shaders"
   ],
   "dependencies": {
-    "@types/chroma-js": "^2.1.4",
-    "chroma-js": "^2.4.2"
+    "@types/chroma-js": "2.4.4",
+    "chroma-js": "2.4.2"
   },
   "devDependencies": {
     "@motion-canvas/internal": "0.0.0",
