feat: programmable sounds (#1082)
* feat(core): add programmable sounds

* feat(ffmpeg): export of programmable sounds

* feat(core): play programmable sounds in the editor

* fix(core): play sounds from the start if it began within a frame

* docs: change license of ffmpeg exporter to GPLv3

The ffmpeg exporter package uses ffmpeg, unsurprisingly, and parts of ffmpeg are licensed under the GPL license.
This requires us to license the ffmpeg exporter with the GPL license as well.
As this exporter is independent from the rest of Motion Canvas, the rest of the packages can keep the MIT license.

* fix(core, ffmpeg): fix overlapping audio playback and fix export

* fix(core): rework audio pool

* feat(ffmpeg): audio sample rate option

* fix(core,ffmpeg): set output duration to the exact frame count

* fix(core,ffmpeg): remove now unused code

* docs(core): swap inheritDoc and doc of 'sound'

* fix(ffmpeg): use -ss option instead of atrim=start=

---------

Co-authored-by: aarthificial <aarthificial@gmail.com>

--- a/packages/ffmpeg/package.json
+++ b/packages/ffmpeg/package.json
@@ -6,7 +6,7 @@
   "author": "motion-canvas",
   "homepage": "https://motioncanvas.io/",
   "bugs": "https://github.com/motion-canvas/motion-canvas/issues",
-  "license": "MIT",
+  "license": "GPLv3",
   "scripts": {
     "build": "npm run client:build && npm run server:build",
     "client:build": "tsc --project client/tsconfig.json",
