--- a/packages/2d/package.json
+++ b/packages/2d/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@motion-canvas/2d",
+  "name": "@blotion-canvas/2d",
+  "private": true,
   "version": "3.17.2",
   "description": "A 2D renderer for Motion Canvas",
   "author": "motion-canvas",
@@ -28,8 +29,8 @@
     "tsconfig.project.json"
   ],
   "devDependencies": {
-    "@motion-canvas/internal": "0.0.0",
-    "@motion-canvas/ui": "^3.17.2",
+    "@blotion-canvas/internal": "0.0.0",
+    "@blotion-canvas/ui": "^3.17.2",
     "@preact/signals": "^1.2.1",
     "clsx": "^2.0.0",
     "jsdom": "^22.1.0",
@@ -40,7 +41,7 @@
     "@codemirror/language": "^6.10.1",
     "@lezer/common": "^1.2.1",
     "@lezer/highlight": "^1.2.0",
-    "@motion-canvas/core": "^3.17.2",
+    "@blotion-canvas/core": "^3.17.2",
     "code-fns": "^0.8.2",
     "escape-string-regexp": "^5.0.0",
     "mathjax-full": "^3.2.2",
