--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@motion-canvas/player",
+  "name": "@blotion-canvas/player",
+  "private": true,
   "version": "3.17.2",
   "description": "A custom element for displaying animations made with Motion Canvas",
   "main": "dist/main.js",
@@ -22,7 +23,7 @@
     "types"
   ],
   "devDependencies": {
-    "@motion-canvas/core": "^3.17.2",
+    "@blotion-canvas/core": "^3.17.2",
     "sass": "^1.58.0",
     "terser": "^5.16.1"
   }
