--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@motion-canvas/ui",
+  "name": "@blotion-canvas/ui",
+  "private": true,
   "version": "3.17.2",
   "description": "A visual editor for Motion Canvas",
   "main": "dist/main.js",
@@ -26,7 +27,7 @@
     "tsconfig.plugin.json"
   ],
   "dependencies": {
-    "@motion-canvas/core": "^3.17.2",
+    "@blotion-canvas/core": "^3.17.2",
     "@preact/signals": "^1.2.1",
     "preact": "^10.19.2"
   },
