--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@motion-canvas/vite-plugin",
+  "name": "@blotion-canvas/vite-plugin",
+  "private": true,
   "version": "3.17.2",
   "description": "A Vite plugin for Motion Canvas projects",
   "main": "lib/index.js",
