--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@motion-canvas/docs",
+  "name": "@blubbers122/motion-canvas-docs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
