--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@motion-canvas/examples",
+  "name": "@blubbers122/motion-canvas-examples",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -7,11 +7,11 @@
     "build": "tsc && vite build --base /examples/"
   },
   "dependencies": {
-    "@motion-canvas/2d": "*",
-    "@motion-canvas/core": "*"
+    "@blubbers122/motion-canvas-2d": "*",
+    "@blubbers122/motion-canvas-core": "*"
   },
   "devDependencies": {
-    "@motion-canvas/ui": "*",
-    "@motion-canvas/vite-plugin": "*"
+    "@blubbers122/motion-canvas-ui": "*",
+    "@blubbers122/motion-canvas-vite-plugin": "*"
   }
 }
