--- a/packages/internal/package.json
+++ b/packages/internal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@motion-canvas/internal",
+  "name": "@blubbers122/motion-canvas-internal",
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
