--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@motion-canvas/renderer",
-  "version": "3.16.0",
+  "name": "@blubbers122/motion-canvas-renderer",
+  "version": "3.17.2",
   "type": "module",
   "main": "lib/index.js",
   "bin": {
-    "motion-canvas-render": "lib/index.js"
+    "motion-canvas-renderer": "lib/index.js"
   },
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w"
   },
   "dependencies": {
-    "@motion-canvas/vite-plugin": "^3.15.1",
+    "@blubbers122/motion-canvas-vite-plugin": "^3.17.2",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.0.0",
     "fluent-ffmpeg": "^2.1.2",
@@ -22,7 +22,7 @@
     "puppeteer": "^22.9.0"
   },
   "devDependencies": {
-    "@motion-canvas/core": "^3.16.0",
+    "@blubbers122/motion-canvas-core": "^3.17.2",
     "@types/cli-progress": "^3.11.5",
     "@types/fluent-ffmpeg": "^2.1.21"
   }
