--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,8 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
-  "private": false,
-  "version": "3.17.2",
+  "private": true,
+  "version": "3.19.0",
   "ignoreChanges": ["**/*.test.ts", "**/*.md"],
   "message": "ci(release): %v [skip ci]",
   "conventionalCommits": true
