--- a/packages/2d/package.json
+++ b/packages/2d/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@blubbers122/motion-canvas-2d",
-  "version": "3.17.2",
+  "version": "3.19.0",
+  "private": true,
   "description": "A 2D renderer for Motion Canvas",
   "author": "blubbers122",
   "homepage": "https://motioncanvas.io/",
@@ -28,8 +29,8 @@
     "tsconfig.project.json"
   ],
   "devDependencies": {
-    "@blubbers122/motion-canvas-internal": "0.0.0",
-    "@blubbers122/motion-canvas-ui": "^3.17.2",
+    "@blubbers122/motion-canvas-internal": "^3.19.0",
+    "@blubbers122/motion-canvas-ui": "^3.19.0",
     "@preact/signals": "^1.2.1",
     "clsx": "^2.0.0",
     "jsdom": "^22.1.0",
@@ -37,10 +38,10 @@
     "vitest": "^0.34.6"
   },
   "dependencies": {
+    "@blubbers122/motion-canvas-core": "^3.19.0",
     "@codemirror/language": "^6.10.1",
     "@lezer/common": "^1.2.1",
     "@lezer/highlight": "^1.2.0",
-    "@blubbers122/motion-canvas-core": "^3.17.2",
     "code-fns": "^0.8.2",
     "escape-string-regexp": "^5.0.0",
     "mathjax-full": "^3.2.2",
