--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@blubbers122/motion-canvas-core",
-  "version": "3.17.2",
+  "version": "3.19.0",
+  "private": true,
   "description": "Web-based tool for creating animations programmatically",
   "main": "lib/index.js",
   "author": "blubbers122",
@@ -29,7 +30,7 @@
     "chroma-js": "2.4.2"
   },
   "devDependencies": {
-    "@blubbers122/motion-canvas-internal": "0.0.0",
+    "@blubbers122/motion-canvas-internal": "^3.19.0",
     "jsdom": "^22.1.0",
     "vitest": "^0.34.6"
   }
