--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@blubbers122/motion-canvas-examples",
   "private": true,
-  "version": "0.0.0",
+  "version": "3.19.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --base /examples/"
   },
   "dependencies": {
-    "@blubbers122/motion-canvas-2d": "*",
-    "@blubbers122/motion-canvas-core": "*"
+    "@blubbers122/motion-canvas-2d": "^3.19.0",
+    "@blubbers122/motion-canvas-core": "^3.19.0"
   },
   "devDependencies": {
-    "@blubbers122/motion-canvas-ui": "*",
-    "@blubbers122/motion-canvas-vite-plugin": "*"
+    "@blubbers122/motion-canvas-ui": "^3.19.0",
+    "@blubbers122/motion-canvas-vite-plugin": "^3.19.0"
   }
 }
