--- a/packages/ffmpeg/package.json
+++ b/packages/ffmpeg/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@blubbers122/motion-canvas-ffmpeg",
-  "version": "3.17.2",
+  "version": "3.19.0",
   "description": "An FFmpeg video exporter for Motion Canvas",
   "main": "lib/server/index.js",
   "author": "motion-canvas",
   "homepage": "https://motioncanvas.io/",
+  "private": true,
   "bugs": "https://github.com/motion-canvas/motion-canvas/issues",
   "license": "GPLv3",
   "scripts": {
@@ -25,8 +26,8 @@
     "@types/fluent-ffmpeg": "^2.1.21"
   },
   "dependencies": {
-    "@blubbers122/motion-canvas-core": "^3.17.2",
-    "@blubbers122/motion-canvas-vite-plugin": "^3.17.2",
+    "@blubbers122/motion-canvas-core": "^3.19.0",
+    "@blubbers122/motion-canvas-vite-plugin": "^3.19.0",
     "ffmpeg-ffprobe-static": "^6.1.1-rc.5",
     "fluent-ffmpeg": "^2.1.3"
   }
