--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@blubbers122/motion-canvas-player",
-  "version": "3.17.2",
+  "version": "3.19.0",
   "description": "A custom element for displaying animations made with Motion Canvas",
   "main": "dist/main.js",
   "types": "types/main.d.ts",
   "author": "motion-canvas",
   "homepage": "https://motioncanvas.io/",
+  "private": true,
   "bugs": "https://github.com/motion-canvas/motion-canvas/issues",
   "license": "MIT",
   "type": "module",
@@ -22,7 +23,7 @@
     "types"
   ],
   "devDependencies": {
-    "@blubbers122/motion-canvas-core": "^3.17.2",
+    "@blubbers122/motion-canvas-core": "^3.19.0",
     "sass": "^1.58.0",
     "terser": "^5.16.1"
   }
