--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@blotion-canvas/template",
+  "name": "@blubbers122/motion-canvas-template",
   "private": true,
-  "version": "0.0.0",
+  "version": "3.19.0",
   "description": "Basic project template for Motion Canvas",
   "author": "motion-canvas",
   "license": "MIT",
@@ -11,11 +11,11 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "@blotion-canvas/core": "*",
-    "@blotion-canvas/2d": "*"
+    "@blubbers122/motion-canvas-2d": "^3.19.0",
+    "@blubbers122/motion-canvas-core": "^3.19.0"
   },
   "devDependencies": {
-    "@blotion-canvas/ui": "*",
-    "@blotion-canvas/vite-plugin": "*"
+    "@blubbers122/motion-canvas-ui": "^3.19.0",
+    "@blubbers122/motion-canvas-vite-plugin": "^3.19.0"
   }
 }
