--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@blotion-canvas/ui",
+  "name": "@blubbers122/motion-canvas-ui",
   "private": true,
-  "version": "3.17.2",
+  "version": "3.19.0",
   "description": "A visual editor for Motion Canvas",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -27,7 +27,7 @@
     "tsconfig.plugin.json"
   ],
   "dependencies": {
-    "@blotion-canvas/core": "^3.17.2",
+    "@blubbers122/motion-canvas-core": "^3.19.0",
     "@preact/signals": "^1.2.1",
     "preact": "^10.19.2"
   },
